# dev_repo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.txt  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: run_tests.yml
src/stests/: __init__.py
src/stests/asserts/: api_asserts.py
src/stests/codestyle/: setup.cfg
src/stests/config/: constants.py
src/stests/fixtures/: conftest.py
src/stests/json_schemas/dashboard/: face_side_of_the_card.py  schema_detail_card.py
src/stests/lib/api/: __init__.py  api_client.py
src/stests/lib/api/models/: bclearer.py  mock_bclearer.py  mock_test_data.json
src/stests/test_data/: test_data.yml
src/stests/utils/: utils.py
tests/api/: test_example.py
tests/test_api/: conftest.py  test_example.py
tests/test_api/test_dashboard/test_cards/: test_dashboard_cards.py  test_detailed_card_view.py
tests/test_api/test_dashboard/test_pipelines/: test_dashboard_pipelines.py
